# sensority-reader-daemon

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  build-arm.sh
cmake/common/: CrossToolchain.cmake  Flags.cmake
cmake/macros/: arm-deployment.cmake
cmake/modules/: FindBcm2835.cmake  FindCares.cmake  FindMosquitto.cmake  FindPoco.cmake
cmake/toolchains/: arm-toolchain.cmake
doc/: CMakeLists.txt  common.dox  connectivity.dox  device.dox  formatter.dox  sensor.dox
src/: App.cpp  App.hpp  CMakeLists.txt  ConnectivitySubsystem.cpp  ConnectivitySubsystem.hpp  DeviceGpio.cpp  DeviceGpio.h  DeviceLibrary.h  DeviceManager.cpp  DeviceManager.h  Formatter.h  HardwareSubsystem.cpp  HardwareSubsystem.hpp  HttpSensorReaderRequestHandler.cpp  HttpSensorReaderRequestHandler.h  HttpSensorReaderRequestHandlerFactory.cpp  HttpSensorReaderRequestHandlerFactory.h  HttpSensorReaderServer.cpp  HttpSensorReaderServer.h  JsonFormatter.cpp  JsonFormatter.h  SensorCommon.cpp  SensorCommon.h  SensorData.h  SensorDataReadable.h  SensorDataStorage.cpp  SensorDataStorage.h  SensorReader.cpp  SensorReader.h  SensorReaderApplication.cpp  SensorReaderApplication.h  SensorReaderApplication.hpp  SensorReaderServer.cpp  SensorReaderServer.h  SensorReadingStrategy.h  SensorReadingStrategyFactory.cpp  SensorReadingStrategyFactory.h  StorageSubsystem.cpp  StorageSubsystem.hpp  StringFormatter.cpp  (+7 more)
src/common/: CMakeLists.txt  Runnable.hpp  System.cpp  System.hpp  Thread.cpp  Thread.hpp  ThreadTarget.cpp  ThreadTarget.hpp
src/connectivity/: CMakeLists.txt  HttpCommon.hpp  HttpDataRequestHandler.cpp  HttpDataRequestHandler.hpp  HttpDataRequestHandlerFactory.cpp  HttpDataRequestHandlerFactory.hpp  HttpDataServer.cpp  HttpDataServer.hpp  MqttClient.cpp  MqttClient.hpp  MqttCommon.cpp  MqttCommon.hpp  MqttDataEndpoint.cpp  MqttDataEndpoint.hpp  MqttDataIssuer.cpp  MqttDataIssuer.hpp  MqttEndpoint.cpp  MqttEndpoint.hpp  MqttLibrary.cpp  MqttLibrary.hpp  MqttNotifier.cpp  MqttNotifier.hpp  MqttObservable.cpp  MqttObservable.hpp  MqttObserver.cpp  MqttObserver.hpp  MqttSource.cpp  MqttSource.hpp  MqttTarget.cpp  MqttTarget.hpp
src/data/: CMakeLists.txt  DataObservable.cpp  DataObservable.hpp  DataObserver.cpp  DataObserver.hpp  Formattable.hpp  Formatter.hpp  FormatterCommon.cpp  FormatterCommon.hpp  FormatterFactory.cpp  FormatterFactory.hpp  JsonFormatter.cpp  JsonFormatter.hpp  MemoryStorage.cpp  MemoryStorage.hpp  Storage.cpp  Storage.hpp  StorageCommon.cpp  StorageCommon.hpp  StorageManager.cpp  StorageManager.hpp  StringFormatter.cpp  StringFormatter.hpp
src/device/: CMakeLists.txt  DeviceCommon.hpp  DeviceGpio.cpp  DeviceGpio.hpp  DeviceLibrary.cpp  DeviceLibrary.hpp  DeviceManager.cpp  DeviceManager.hpp
src/formatter/: CMakeLists.txt  Formatter.hpp  FormatterFactory.cpp  FormatterFactory.hpp  JsonFormatter.cpp  JsonFormatter.hpp  StringFormatter.cpp  StringFormatter.hpp
src/hardware/: CMakeLists.txt  ConnectivitySubsystem.cpp  ConnectivitySubsystem.hpp  DeviceCommon.hpp  DeviceGpio.cpp  DeviceGpio.hpp  DeviceLibrary.cpp  DeviceLibrary.hpp  SensorCommon.cpp  SensorCommon.hpp  SensorReader.cpp  SensorReader.hpp  SensorReaderFactory.cpp  SensorReaderFactory.hpp  SensorReaderManager.cpp  SensorReaderManager.hpp  TemperatureSensorReader.cpp  TemperatureSensorReader.hpp
src/http/: CMakeLists.txt  HttpDataRequestHandler.cpp  HttpDataRequestHandler.hpp  HttpDataRequestHandlerFactory.cpp  HttpDataRequestHandlerFactory.hpp  HttpDataServer.cpp  HttpDataServer.hpp  HttpSensorReaderRequestHandler.cpp  HttpSensorReaderRequestHandler.hpp  HttpSensorReaderRequestHandlerFactory.cpp  HttpSensorReaderRequestHandlerFactory.hpp  HttpSensorReaderServer.cpp  HttpSensorReaderServer.hpp
src/os/: CMakeLists.txt  System.cpp  System.hpp
src/sensor/: CMakeLists.txt  SensorCommon.cpp  SensorCommon.hpp  SensorData.hpp  SensorDataReadable.hpp  SensorDataStorage.cpp  SensorDataStorage.hpp  SensorReadableData.hpp  SensorReader.cpp  SensorReader.hpp  SensorReaderServer.cpp  SensorReaderServer.hpp  SensorReadingStrategy.hpp  SensorReadingStrategyFactory.cpp  SensorReadingStrategyFactory.hpp  TemperatureSensorData.cpp  TemperatureSensorData.hpp  TemperatureSensorReadingStrategy.cpp  TemperatureSensorReadingStrategy.hpp
